# walltime-panel

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  configure.ac  walltime-panel.ism  walltime-panel.spec.in
icons/: Makefile.am  settings.xpm  walltime-16x16.xpm  walltime_logo.xpm
src/: Makefile.am  cmdswitch.cpp  combobox.cpp  combobox.h  config.cpp  configdialog.cpp  configdialog.h  icons.rc  profile.cpp  profile.h  walltime-panel.cpp  walltime-panel.h
xdg/: Makefile.am  walltime-panel.desktop
